--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -38,3 +38,9 @@ jobs:
     steps:
       - name: Deploy
         run: echo "Deploying..."
+      - name: Download artifacts
+        uses: actions/download-artifacts@v3
+        with:
+          name: dist-files
+      - name: Output contents
+        run: ls
