--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -18,6 +18,9 @@ jobs:
   build:
     needs: test
     runs-on: ubuntu-latest
+    outputs:
+      script-file: ${{steps.publish.outputs.script-file}}
+
     steps:
       - name: Get code
         uses: actions/checkout@v3
@@ -25,13 +28,17 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
+      - name: Publish JS files
+        id: publish
+        run: find dist/assets/*js -type f -execdir echo 'script-file={}' >> $GITHUB_OUTPUT ';'
+        # run: find dist/assets/*js -type f -execdir echo '::set-output name=script-file::{}' ';'
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
           name: dist-files
-          path: |
-            dist
-            package.json
+          path: dist
+            # dist
+            # package.json
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -44,3 +51,5 @@ jobs:
           name: dist-files
       - name: Output contents
         run: ls
+      - name: Ouput filename
+        run: echo "${{needs.build.outputs.script-file}}"
